--- a/assingment/signup.html
+++ b/assingment/signup.html
@@ -5,6 +5,39 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="main">
+       <div id="logo">
+        <img src="./images/logo.png" alt="Logo">
+
+
+       </div>
+       <div id="hello">
+        <h1>Hello signup now</h1>
+       </div>
+       <div id=" login">
+
+        <div>already have account</div>
+        <div>login</div>
+
+
+
+       </div>
+
+        <h1>Sign Up Form</h1>
+        <form id="signupForm">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <br><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <br><br>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <br><br>
+            <input type="submit" value="Sign Up">
+        </form>
+
+    </div>
 
 </body>
 <script src="./script/singnup.js"></script>
