--- a/assingment/login.html
+++ b/assingment/login.html
@@ -21,7 +21,8 @@
             padding: 40px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 360px;
+            width: 400px;
+            height: 800px;
             text-align: center;
         }
 
@@ -129,23 +130,15 @@
         <h1>
             Hello,
             <br />
-            Signup Now.
+            login Now.
         </h1>
         <p>
-            Already have an account select
+            new user
         </p>
         <button class="login-btn">
-            <a href="./login.html"> Login</a>
+            <a href="./signup.html">signup</a>
         </button>
-        <div class="input-group">
-            <label for="username">
-                Username
-            </label>
-            <input id="username" placeholder="Username" type="text" />
-            <small>
-                It's Unique ID
-            </small>
-        </div>
+
         <div class="input-group">
             <label for="email">
                 Email
@@ -164,7 +157,7 @@
             </small>
         </div>
         <button class="signup-btn">
-            Sign Up
+            login
             <i class="fas fa-arrow-right">
             </i>
         </button>
