--- a/assingment/index.html
+++ b/assingment/index.html
@@ -8,13 +8,16 @@
 <body>
     <div class="container">
 
-        <img src="./images/279251884_358203993019933_1609719603124971661_n.jpeg" alt="">
+        <img id="myImage" src="./images/279251884_358203993019933_1609719603124971661_n.jpeg" alt="">
 
-        <a href="./signup.html"> signup </a>
 
     </div>
 
 
+
+
 </body>
+
+
 <script src="./script/index.js"></script>
 </html>
