--- a/programs/server_4/frontend/signup.html
+++ b/programs/server_4/frontend/signup.html
@@ -10,10 +10,10 @@
 
 <body>
     <h1>signup</h1>
-    <form id="login-form">
+    <form id="signup-form">
         <input type="email" placeholder="Email" required>
         <input type="password" placeholder="Password" required>
-        <button type="submit">signin</button>
+        <button type="submit">signup</button>
     </form>
     <p>already have an account? <a href="login.html">login</a></p>
 
