--- a/programs/server_5/frontend/signup.html
+++ b/programs/server_5/frontend/signup.html
@@ -177,6 +177,7 @@
             this.classList.toggle('fa-eye-slash');
         });
     </script>
+    <script src="auth.js"></script>
 </body>
 
 </html>
