--- a/programs/server_5/frontend/login.html
+++ b/programs/server_5/frontend/login.html
@@ -170,6 +170,7 @@
             this.classList.toggle('fa-eye-slash');
         });
     </script>
+    <script src="auth.js"></script>
 </body>
 
 </html>
